Footer Spacing Fixed

--- a/css/style.css
+++ b/css/style.css
@@ -510,9 +510,6 @@ hr {
   .footer p {
     margin: 0;
   }
-  .footer .copyright {
-    margin: 1.5em;
-  }
   .contact h3 {
     margin: 20px 0;
   }
